--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         node-version: 14
 
+    - name: print secret
+      run: echo $GITLAB_USERNAME
+      env:
+        GITLAB_USERNAME: ${{secrets.GITLAB_USERNAME}}
+
     - name: Install node dependencies
       run: npm i
 
